<resources>
    <string name="app_name">dmzj</string>
    <string name="zero_percent">0%</string>
    <string name="first_chapter">第一章</string>
    <string name="selected_0_num_text">选中0个字</string>
    <string name="copy">复制</string>
    <string name="pre_chapter">上一章</string>
    <string name="next_chapter">下一章</string>
    <string name="font">字体</string>
    <string name="cover">滑盖</string>
    <string name="translate">平移</string>
    <string name="shear">剪切</string>
    <string name="page">翻页</string>
    <string name="style">风格</string>
    <string name="select_char_num">选中%d个文字</string>
    <string name="downloadmange">下载管理</string>
    <string name="setting">设置</string>
    <string name="update">更新</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">搜索</string>
    <string name="search_hint">输入关键词</string>
    <string name="change">换一批</string>
    <string name="clear_history">清空历史记录</string>
    <string name="nobook">当前无任何书籍，点击添加</string>
    <string name="书名">bookname</string>
    <string name="天籁小说">source</string>
    <string name="简介">book desc</string>
    <string name="作者">author</string>
    <string name="类型">type</string>
    <string name="content">【目录】</string>
    <string name="daoxu">倒序</string>
    <string name="shangyizhang">上一章</string>
    <string name="xiayizhang">下一章</string>
    <string name="huancun">缓存</string>
    <string name="yejian">夜间</string>
    <string name="mulu">目录</string>
    <string name="xitong">系统</string>
    <string name="Ajian">A-</string>
    <string name="_20">20</string>
    <string name="Ajia">A+</string>
    <string name="fanti">繁</string>
    <string name="ziti">字体</string>
    <string name="slow">慢</string>
    <string name="quick">快</string>
    <string name="zidonggunping">自动滚屏</string>
    <string name="refresh_again">加载失败，点击重新加载</string>
    <string name="day">日间</string>
    <string name="night">夜间</string>
    <string name="chapter">chapter</string>
    <string name="positive_sort">正序</string>
    <string name="inverted_sort">倒序</string>
    <string name="history">history</string>
    <string name="add_book">加入书架</string>
    <string name="bookname">bookname</string>
    <string name="edit">编辑</string>
    <string name="complete">完成</string>
    <string name="book_souce">书源</string>
    <string name="newchapter">最新章节</string>
    <string name="copyright">版权说明</string>
    <string name="disclaimer">免责声明</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>